# caroline

./: .gitignore  .travis.yml  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
caroline/: __init__.py  config.py  engine.py  errors.py  test_engine.py
caroline/databases/: elasticsearch.py  jsondb.py  redis.py
charlotte/: __init__.py  config.py  engine.py  errors.py  test_engine.py
charlotte/databases/: elasticsearch.py  redis.py
